# pico-stock-ticker

./: .gitignore  CMakeLists.txt  battery.c  battery.h  main.c  ticker.c  ticker.h  ticker_display.c  ticker_display.h  ticker_https.c  ticker_https.h
epd/: CMakeLists.txt
epd/Config/: DEV_Config.c
